# libonewire

./: .gitignore  CMakeLists.txt
include/: onewire.h  utils_avr.h  utils_tiva.h
lib/: utils_avr.c  utils_tiva.c
src/: onewire_avr.c  onewire_tiva.c
